# grafana-assistant-demo

./: .env.example  README.md  docker-compose.yml  install-linux.sh
alloy/: Dockerfile  config.alloy
certs/: netskope.cer  sd.dika.be.cer
docs/specs/: 2026-03-16-grafana-assistant-demo-design.md  2026-03-16-grafana-assistant-demo-plan.md
flagd/: flags.json
load-generator/: Dockerfile  generate.py
scripts/: reset-demo.sh
services/api-gateway/: Dockerfile  pyproject.toml
services/api-gateway/app/: main.py  routes.py
services/inventory-service/: Dockerfile  pyproject.toml
services/inventory-service/app/: config.py  main.py  routes.py
services/order-service/: Dockerfile  pyproject.toml
services/order-service/app/: main.py  processing.py  routes.py
